<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodels.SignUpFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUpPage"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/FragmentHeader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userName"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/EnterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterUserName"
                android:inputType="text"
                android:text="@={viewModel.enterUserName}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/mobileNumber" />

            <EditText
                android:id="@+id/EnterMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterMobileNumber"
                android:inputType="phone"
                android:maxLength="10"
                android:text="@={viewModel.enterMobileNumber}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.enterEmail}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/setPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setPassword"
                android:inputType="textPassword"
                android:text="@={viewModel.setPassword}" />
        </LinearLayout>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{(view) -> viewModel.onSignUpButtonClick(view)}"
            android:text="@string/signUp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AlreadyHaveAnAccount" />

            <Button
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->viewModel.onLogInButtonClick(view)}"
                android:text="@string/logIn" />

        </LinearLayout>


    </LinearLayout>


</layout>