<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodels.LoginFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/LoginPage"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/FragmentHeader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userName"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/EnterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterUserName"
                android:inputType="text"
                android:text="@={viewModel.enterUserName}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="@dimen/SignUpTVWidth"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/EnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:inputType="textPassword"
                android:text="@={viewModel.enterPassword}" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.onLoginButtonClick()}"
            android:text="@string/logIn" />




    </LinearLayout>


</layout>